<resources>
    <string name="app_name">KotlinPanin</string>
    <string name="ipsum_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
                officia deserunt mollit anim id est laborum.</string>

    <string name="less_a_minute">Less a minute ago</string>

    <string name="key_one">AIzaSyDSdq4</string>
    <string name="key_two">pV4D-OpQi</string>
    <string name="key_three">9bK1ngfE3sQoLZftkCU</string>

    <plurals name="plurals_minutes">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="two">%1$d minutes ago</item>
        <item quantity="few">%1$d minutes ago</item>
        <item quantity="many">%1$d minutes ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>

    <plurals name="plurals_hours">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="two">%1$d hours ago</item>
        <item quantity="few">%1$d hours ago</item>
        <item quantity="many">%1$d hours ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>

    <plurals name="plurals_days">
        <item quantity="one">%1$d day ago</item>
        <item quantity="two">%1$d days ago</item>
        <item quantity="few">%1$d days ago</item>
        <item quantity="many">%1$d days ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <plurals name="plurals_months">
        <item quantity="one">%1$d month ago</item>
        <item quantity="two">%1$d months ago</item>
        <item quantity="few">%1$d months ago</item>
        <item quantity="many">%1$d months ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>

    <plurals name="plurals_years">
        <item quantity="one">%1$d year ago</item>
        <item quantity="two">%1$d years ago</item>
        <item quantity="few">%1$d years ago</item>
        <item quantity="many">%1$d years ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>

    <string name="ad_text">AD</string>
    <string name="repost_from">Repost from %1$s, posted %2$s</string>

    <string name="loading_title">Loading data…</string>
    <string name="loading_progress">%1$d%% loaded</string>

    <string name="input_email">E-mail</string>
    <string name="input_pass">Password</string>
    <string name="input_display">Display Name</string>
    <string name="input_avatar">Avatar link</string>
    <string name="btn_login">Login</string>
    <string name="btn_registrate">Registration</string>
    <string name="reg_chkbx">Already a user?</string>

    <string name="post_param_text">Text</string>
    <string name="post_param_video">YouTube video id</string>
    <string name="post_param_address">Address</string>
    <string name="post_param_longitude">Longitude</string>
    <string name="post_param_latitude">Latitude</string>

    <string-array name="post_types">
        <item>TEXT</item>
        <item>VIDEO</item>
        <item>AD</item>
        <item>EVENT</item>
    </string-array>

    <string name="post_create_label">Add new post</string>
    <string name="post_create_btn">Add</string>

    <string name="repost_create_label">Repost</string>
    <string name="repost_create_btn">Add</string>
    <string name="repost_input">Comment</string>

    <string name="load_newer">Load recent</string>
    <string name="load_older">Load older</string>

</resources>
