<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:srcCompat="@mipmap/test_img_five" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            tool:text="20 августа 2016" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/date"
            tool:text="Test User" />

        <ImageView
            android:id="@+id/geoIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:srcCompat="@drawable/location"
            tool:srcCompat="@drawable/location"
            tool:visibility="visible" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/geoIcon"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tool:text="город Москва"
            tool:visibility="visible" />

        <TextView
            android:id="@+id/adText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ad_text"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tool:visibility="visible" />

        <FrameLayout
            android:id="@+id/youtubeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            tool:visibility="visible">

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                tool:srcCompat="@mipmap/preview" />

            <ImageView
                android:id="@+id/playBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/play" />

        </FrameLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeLayout"
            tool:text="@string/ipsum_string" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <ImageView
                android:id="@+id/likesIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                tool:srcCompat="@drawable/likes_yes" />

            <TextView
                android:id="@+id/likesCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:minWidth="25dp"
                android:textColor="@color/colorBlack"
                tool:text="15" />

            <ImageView
                android:id="@+id/commentsIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                tool:srcCompat="@drawable/comments_yes" />

            <TextView
                android:id="@+id/commentsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:minWidth="25dp"
                android:textColor="@color/colorBlack"
                tool:text="20" />

            <ImageView
                android:id="@+id/sharesIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                tool:srcCompat="@drawable/shares_yes" />

            <TextView
                android:id="@+id/sharesCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:minWidth="25dp"
                android:textColor="@color/colorBlack"
                tool:text="7" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>